--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,7 +1,7 @@
 <!-- Barra de busqueda de empleo -->
   <div id="buscar" class="input-group">
     <div id="buscador" class="col">
-      <input type="search" id="idd" class="form-control rounded" placeholder="Encuentra tu oferta de empleo">
+      <input type="search" id="busca" class="form-control rounded" placeholder="Encuentra tu oferta de empleo">
       <button type="submit" class="btn btn-outline-primary" (click)="buscar()"><i class="fas fa-search-plus"></i>
         Buscar</button>
       <button class="btn btn-outline-danger" (click)="limpiarBusqueda()"><i class="fas fa-search-minus"></i> Limpiar
@@ -24,7 +24,7 @@
           <th scope="col">Jornada</th>
           <!-- <th scope="col">Telefono de contacto</th> -->
           <!-- <th scope="col">Email de contacto</th> -->
-          <th scope="col">Oferta publicada</th>
+          <th scope="col">Publicada</th>
           <th scope="col" colspan="3"></th>
         </tr>
       </thead>
@@ -70,7 +70,7 @@
           <th scope="col">Empresa</th>
           <th scope="col">Ubicacion</th>
           <th scope="col">Jornada</th>
-          <th scope="col">Oferta publicada</th>
+          <th scope="col">publicada</th>
           <th scope="col" colspan="3"></th>
         </tr>
       </thead>
