--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,13 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"><h3>R-Jobs</h3></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse mt 10" id="navbarNav">
+  <a class="navbar-brand" href="/">
+    <h3>R-Jobs</h3>
+  </a>
+  <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+  aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon menu-visible"></span>
+</button>
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-
       <li class="nav-item">
         <a id="of" class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
       </li>
@@ -17,13 +18,8 @@
         <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculim Vitae</a>
+        <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculum Vitae</a>
       </li>
-    </ul>
-  </div>
-  <div class="collapse navbar-collapse" style="margin-right: 20px;" id="navbarNav">
-    <ul class="navbar-nav">
-
       <li class="nav-item">
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
       </li>
@@ -32,5 +28,27 @@
       </li>
     </ul>
   </div>
+  <div id="minimenu" class="container mt-5">
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <div class="card">
+          <div class="card-header">
+            <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
+            <a class="btn btn-outline-danger" routerLink="/"><i class="fas fa-circle-user"></i> Accede como candidato</a>
+          </div>
+          <div class="card-body">
+            <div class="list-group">
+              <a routerLink="/" class="list-group-item list-group-item-action"><i class="far fa-list-alt"></i> Lista de ofertas</a>
+              <a routerLink="/nuevo" class="list-group-item list-group-item-action"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
+              <a routerLink="/" class="list-group-item list-group-item-action"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+              <a routerLink="/" class="list-group-item list-group-item-action"><i class="fas fa-circle-user"></i> Sube tu Curriculum Vitae</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </nav>
 <router-outlet></router-outlet>
+
+
