--- a/frontend/src/app/empleo/detalle-empleo.component.css
+++ b/frontend/src/app/empleo/detalle-empleo.component.css
@@ -11,7 +11,14 @@
     padding: 1vw;
     margin: 3rem auto;
     border-radius: 1vw;
+    box-shadow: 0px 0px 10px white;
+    background-color: #212529;
 }
-.card-header, .card-footer{
-    background-color: rgb(224, 224, 224);
+.card-header, .card-footer, .card-footer, .list-group-item{
+    /* background-color: rgb(209, 209, 209); */
+    background-color: #212529;
+    color: white;
+}
+li:nth-child(1){
+    margin: 0 auto;
 }
