--- a/frontend/src/app/empleo/editar-empleo.component.css
+++ b/frontend/src/app/empleo/editar-empleo.component.css
@@ -2,9 +2,10 @@
     color: white;
     width: 70%;
     margin: 1rem auto;
+    box-shadow: 0px 0px 10px white;
 }
 .col-md-4{
-    background-color: rgb(44, 44, 44);
+    background-color:#212529;
     padding: 1vw;
     width: 80%;
     margin: 3rem auto;
