--- a/frontend/src/app/empleo/lista-empleo.component.css
+++ b/frontend/src/app/empleo/lista-empleo.component.css
@@ -14,6 +14,7 @@
     padding: 1vw;
     background-color: #212529;
     border-radius: 1vw;
+    box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
 
 #buscador>*{
@@ -25,10 +26,9 @@
     width: 60%;
 }
 
-#borde{
-    border-radius: 3vw;
+.lista{
+    box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
-#tablaOfertas {
-    border-radius: 10px;
-  }
-
+li{
+  color:white ;
+}
