--- a/frontend/src/app/empleo/nuevo-empleo.component.css
+++ b/frontend/src/app/empleo/nuevo-empleo.component.css
@@ -4,11 +4,12 @@
     margin: 1rem auto;
 }
 .col-md-4{
-    background-color: rgb(44, 44, 44);
+    background-color: #212529;
     padding: 1vw;
     width: 80%;
     margin: 3rem auto;
     border-radius: 1vw;
+    box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
 h1{
     color: white;
