--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -4,13 +4,15 @@
   width: 100%;
   margin-bottom: 1.5vw;
 }
-.navbar-brand{
+
+.navbar-brand {
   margin: 0 1.5vw
 }
 
-.btn{
+.btn {
   margin: 0 1.5vw;
 }
+
 .card {
   border: 1px solid #b8b8b8;
   border-radius: 10px;
@@ -30,18 +32,53 @@
   border: 0;
   border-bottom: 1px solid #ccc;
 }
+
 #minimenu {
   display: none;
 }
-.card-header{
+
+.card-header {
   text-align: center;
 }
-.card-header a{
+
+.card-header a {
   margin: 1vw;
 }
-  
+
+footer {
+  background-color: #212529;
+  width: 100%;
+  margin-top: 4rem;
+}
+
+footer p {
+  text-align: center;
+  color: white;
+  font-size: smaller;
+  padding: 1rem;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+#politica {
+  display: block;
+  padding:1.5vw;
+  position: fixed;
+  bottom: 0;
+  background-color: black;
+  color: white;
+}
+
+li:nth-child(5){
+  margin-left: 6rem;
+}
+
+
 @media(min-width:768px) {
   #minimenu {
     display: none;
   }
+
 }
