--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -20,10 +20,14 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculum Vitae</a>
       </li>
-      <li class="nav-item">
+    </ul>
+  </div>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
         <a class="btn btn-outline-primary" routerLink="/"><i class="fas fa-circle-user"></i> Accede como empresa</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="btn btn-outline-danger" routerLink="/"><i class="fas fa-circle-user"></i> Accede como candidato</a>
       </li>
     </ul>
@@ -49,6 +53,22 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div id="politica">
+  
+     <h3>Nos importa tu privacidad</h3>
+      <p>Con nuestros socios utilizamos cookies para almacenar y acceder a los datos personales como los datos de navegación con el proposito de personalizar el contenido, anuncios y analizar el tráfico del sitio. Podrás encontrar más información acerca del porque con nuestros socios usamos cookies o manejamos tus preferencias haciendo clic en "configuracion de cookies" en el botón debajo. Puedes volver a visitar el consentimiento que has dado o quitar el consentimiento en cualquier momento haciendo clic en configuracion de cookies en nuestra política de cookies. Trabajamos en coordinación con un marco de la industria, considerando tus preferencias globalmente con todos los sitios webs participantes. 
+      Con nuestros socios procesamos datos:
+      Almacena y/o accede a la información en un dispositivo. Anuncios personalizados. Contenido personalizado. Medición de anuncios y contenido, estadísticas de audiencia y desarrollo de producto. Para más información, <a routerLink="/politica">por favor lea nuestra Política de cookies.</a></p>
 
+  <button  id="botonPolitica" class="btn btn-outline-success" ><i class="fa-solid fa-check"></i>
+    Aceptar</button>
+   
+  <!-- <button class="btn btn-outline-danger" ><i class="fa-solid fa-ban"></i> Cancelar </button> -->
+</div>
+<router-outlet></router-outlet>
+<footer>
+  <a routerLink="/politica">
+    <p> © 2023 R-Jobs - Todos los derechos reservados</p>
+  </a>
+</footer>
 
