--- a/frontend/src/app/empleo/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle-empleo.component.html
@@ -8,7 +8,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-grou-item"><img id="logo" src="{{empleo.logo}}" alt="logo">
                     </li>
-                    <li class="list-group-item"><b>Nº de oferta: </b>{{empleo.id}}</li>
+                    <li class="list-group-item"><b>Nº de publicación: </b>{{empleo.id}}</li>
                     <li class="list-group-item"><b>Oferta: </b>{{empleo.titulo}}</li>
                     <li class="list-group-item"><b>Descripcion: </b>{{empleo.descripcion}}</li>
                     <li class="list-group-item"><b>Empresa: </b>{{empleo.empresa}}</li>
