--- a/frontend/src/app/empleo/lista-empleo.component.css
+++ b/frontend/src/app/empleo/lista-empleo.component.css
@@ -1,14 +1,15 @@
-
-#buscar, .lista{
+#buscar,
+.lista {
     margin: 0 auto;
     width: 70%;
 }
-#logo{
+
+#logo {
     max-width: 10vw;
     max-height: 10vw;
 }
 
-#buscador{
+#buscador {
     display: flex;
     margin: 1.5vw auto;
     padding: 1vw;
@@ -17,18 +18,27 @@
     box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
 
-#buscador>*{
+#buscador>* {
     margin: 0 0.5vw;
 }
 
 
-#buscador>input{
+#buscador>input {
     width: 60%;
 }
 
-.lista{
-    box-shadow: 0px 0px 10px rgb(230, 230, 230);
+.lista {
+    box-shadow: 0px 0px 1vw rgb(230, 230, 230);
+    border-radius: 1vw;
 }
-li{
-  color:white ;
+
+li {
+    color: white;
 }
+
+.table {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 1vw;
+    overflow: hidden;
+  }
