--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,7 +1,7 @@
 <!-- Barra de busqueda de empleo -->
   <div id="buscar" class="input-group">
     <div id="buscador" class="col">
-      <input type="search" id="busca" class="form-control rounded" placeholder="Encuentra tu oferta de empleo">
+      <input type="search" id="busca" class="form-control rounded" placeholder="Busca por puesto, empresa o palabra clave" (keyup)="enter($event)">
       <button type="submit" class="btn btn-outline-primary" (click)="buscar()"><i class="fas fa-search-plus"></i>
         Buscar</button>
       <button class="btn btn-outline-danger" (click)="limpiarBusqueda()"><i class="fas fa-search-minus"></i> Limpiar
@@ -11,17 +11,17 @@
 
 <!-- lista con todos los empleos guardados en la bd -->
   <div class="lista" *ngIf="!listaVacia">
-    <table id="tablaOfertas" class="table table-dark text-center rounded" *ngIf="mostrarTabla">
+    <table id="tablaOfertas" class="table table-dark text-center" *ngIf="mostrarTabla">
       <thead>
         <tr>
           <th scope="col"></th>
           <th scope="col">Oferta</th>
           <!-- <th scope="col">Descripcion</th> -->
           <th scope="col">Empresa</th>
-          <th scope="col">Ubicacion</th>
+          <th scope="col">Ubicación</th>
           <!-- <th scope="col">Salario mensual</th> -->
           <!-- <th scope="col">Tipo de Contrato</th>  -->
-          <th scope="col">Jornada</th>
+          <!-- <th scope="col">Jornada</th> -->
           <!-- <th scope="col">Telefono de contacto</th> -->
           <!-- <th scope="col">Email de contacto</th> -->
           <th scope="col">Publicada</th>
@@ -38,7 +38,7 @@
           <td>{{empleo.ubicacion}}</td>
           <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
           <!-- <td>{{empleo.tipoContrato}}</td> -->
-          <td>{{empleo.jornada}}</td>
+          <!-- <td>{{empleo.jornada}}</td> -->
           <!-- <td>{{empleo.telefono}}</td> -->
           <!-- <td>{{empleo.email}}</td> -->
           <td>{{ getTime(empleo.createdAt) }}</td>
@@ -62,15 +62,15 @@
 
   <!-- Lista que mostrara las ofertas cuyas palabras concidan con la busqueda -->
   <div class="lista" *ngIf="empleosFiltrados?.length ?? 0 > 0">
-    <table id="tablaBusqueda" class="table table-dark text-center rounded">
+    <table id="tablaBusqueda" class="table table-dark text-center">
       <thead>
         <tr>
           <th scope="col"></th>
           <th scope="col">Oferta</th>
           <th scope="col">Empresa</th>
-          <th scope="col">Ubicacion</th>
-          <th scope="col">Jornada</th>
-          <th scope="col">publicada</th>
+          <th scope="col">Ubicación</th>
+          <!-- <th scope="col">Jornada</th> -->
+          <th scope="col">Publicada</th>
           <th scope="col" colspan="3"></th>
         </tr>
       </thead>
@@ -81,7 +81,7 @@
           <td>{{empleo.titulo}}</td>
           <td>{{empleo.empresa}}</td>
           <td>{{empleo.ubicacion}}</td>
-          <td>{{empleo.jornada}}</td>
+          <!-- <td>{{empleo.jornada}}</td> -->
           <td>{{ getTime(empleo.createdAt) }}</td>
           <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
