--- a/frontend/src/app/empleo/detalle-empleo.component.css
+++ b/frontend/src/app/empleo/detalle-empleo.component.css
@@ -1,24 +1,31 @@
-*{
-    list-style:none;
+* {
+    list-style: none;
 }
 
-#logo{
+#logo {
     max-width: 100%;
     max-height: 100%;
 }
 
-.card{
+.card {
     padding: 1vw;
-    margin: 1rem auto;
     border-radius: 1vw;
     box-shadow: 0px 0px 10px white;
     background-color: #212529;
 }
-.card-header, .card-footer, .card-footer, .list-group-item{
+
+.card-header,
+.card-footer,
+.list-group-item {
     /* background-color: rgb(209, 209, 209); */
     background-color: #212529;
     color: white;
 }
-li:nth-child(1){
-    margin: 0 auto;
+
+li:nth-child(1) {
+    margin: 1.5rem auto;
+}
+.container{
+    display: flex;
+    justify-content: center;
 }
