--- a/frontend/src/app/empleo/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle-empleo.component.html
@@ -1,15 +1,12 @@
 <div class="container">
-    <div class="row mt-5" *ngIf="empleo">
-        <div class="col-md-4 mx-auto">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header text-center">
-                    <h3>Detalle de la oferta</h3>
-                </div>
+    <div class="row mt-5">
+        <div class="col-md-4 ">
+            <div class="card" style="width: 40rem; ">
                 <ul class="list-group list-group-flush">
                     <li class="list-grou-item"><img id="logo" src="{{empleo.logo}}" alt="logo">
                     </li>
                     <li class="list-group-item"><b>Nº de publicación: </b>{{empleo.id}}</li>
-                    <li class="list-group-item"><b>Oferta: </b>{{empleo.titulo}}</li>
+                    <li class="list-group-item"><b>Puesto: </b>{{empleo.titulo}}</li>
                     <li class="list-group-item"><b>Descripcion: </b>{{empleo.descripcion}}</li>
                     <li class="list-group-item"><b>Empresa: </b>{{empleo.empresa}}</li>
                     <li class="list-group-item"><b>Ubicacion: </b>{{empleo.ubicacion}}</li>
@@ -26,7 +23,6 @@
                             class="fas fa-arrow-alt-circle-left"></i> Volver</button>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
