frontend: componentes, registro empresa y login empresa

--- a/frontend/src/app/empleo/politica.component.html
+++ b/frontend/src/app/empleo/politica.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div><h1> POLÍTICA DE PRIVACIDAD DEL SITIO WEB </h1>
 <p> https://r-jobs.es</p>
 <h2>I. POLÍTICA DE PRIVACIDAD Y PROTECCIÓN DE DATOS</h2>
