--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -1,3 +1,5 @@
+
+<app-menu></app-menu>
 <!-- Barra de busqueda de empleo -->
   <div id="buscar" class="input-group">
     <div id="buscador" class="col">
@@ -44,10 +46,10 @@
           <td>{{ getTime(empleo.createdAt) }}</td>
           <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
-            <!-- <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+            <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
             Editar</button></td>
         <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-              class="far fa-trash-alt"></i> Eliminar </button></td> -->
+              class="far fa-trash-alt"></i> Eliminar </button></td>
         </tr>
       </tbody>
     </table>
@@ -86,10 +88,10 @@
           <td><button class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
           </td>
-          <!-- <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+          <td><button class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
             Editar</button></td>
         <td><button class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-              class="far fa-trash-alt"></i> Eliminar </button></td> -->
+              class="far fa-trash-alt"></i> Eliminar </button></td>
         </tr>
       </tbody>
     </table>
