--- a/frontend/src/app/auth/login-empresa.component.html
+++ b/frontend/src/app/auth/login-empresa.component.html
@@ -6,11 +6,11 @@
         <div class="card-header">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link active" routerLink="/login-empresa"><i
-                            class="fa-solid fa-right-to-bracket"></i>Login</a>
+                    <a class="nav-link active" routerLink="/login-empresa" routerLinkActive="active"><i
+                            class="fa-solid fa-right-to-bracket"></i> Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/registro-empresa"><i class="fa-solid fa-user-plus"></i>Crea tu
+                    <a class="nav-link" routerLink="/registro-empresa" ><i class="fa-solid fa-user-plus"></i> Crea tu
                         cuenta de empresa</a>
                 </li>
             </ul>
@@ -19,15 +19,17 @@
         <div class="card-body">
             <form class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" class="form-control" name="email" id="email" required>
+                <input type="text" class="form-control" name="email" id="email" required
+                [(ngModel)]="email">
             </form>
             <form class="form-group">
                 <label for="password">Contraseña:</label>
-                <input type="password" class="form-control" name="password" id="password" required>
+                <input type="password" class="form-control" name="password" id="password" required
+                [(ngModel)]="password">
             </form>
             <form class="form-group">
-                <button class="btn btn-outline-success btn-block"><i
-                    class="fa-solid fa-right-to-bracket"></i>Acceder</button>
+                <button class="btn btn-outline-success btn-block" (click)="onLogin()"><i
+                    class="fa-solid fa-right-to-bracket"></i> Acceder</button>
             </form>
         </div>
     </div>
