--- a/frontend/src/app/empleo/editar-empleo.component.css
+++ b/frontend/src/app/empleo/editar-empleo.component.css
@@ -2,18 +2,18 @@
     color: white;
     width: 70%;
     margin: 1rem auto;
-    box-shadow: 0px 0px 10px white;
 }
 .col-md-4{
-    background-color:#212529;
+    background-color: #212529;
     padding: 1vw;
     width: 80%;
     margin: 3rem auto;
     border-radius: 1vw;
+    box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
 h1{
     color: white;
-    font-size: 3vw;
+    font-size: 5rem;
     margin:3rem;
     text-align: center;
 }
