--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
       <h3>R-Jobs</h3>
+      <h3 *ngIf="id">id:{{id}}</h3>
     </a>
     <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,18 +18,21 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Sube tu Curriculum Vitae</a>
-        </li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="btn btn-outline-primary" routerLink="/login-empresa"><i class="fas fa-circle-user"></i> Accede como empresa</a>
+          <a class="btn btn-outline-primary" routerLink="/login-empresa" *ngIf="!isLogged"><i class="fas fa-circle-user"></i> Accede como empresa</a>
         </li>
         <li class="nav-item ">
+          <a class="btn btn-outline-danger" routerLink="/login-candidato" *ngIf="isLogged" (click)="logOut()"><i class="fas fa-circle-user"></i> Cerrar sesion</a>
+        </li>
+        <!-- <li class="nav-item ">
           <a class="btn btn-outline-danger" routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como candidato</a>
+        </li> -->
+        <li class="nav-item ">
+          <a class="btn btn-outline-primary" routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como candidato</a>
         </li>
       </ul>
     </div>
