--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -2,6 +2,7 @@
     <a class="navbar-brand" href="/">
       <h3>R-Jobs</h3>
       <h3 *ngIf="id">id:{{id}}</h3>
+      <h3 *ngIf="rol">rol:{{rol}}</h3>
     </a>
     <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +27,7 @@
           <a class="btn btn-outline-primary" routerLink="/login-empresa" *ngIf="!isLogged"><i class="fas fa-circle-user"></i> Accede como empresa</a>
         </li>
         <li class="nav-item ">
-          <a class="btn btn-outline-danger" routerLink="/login-candidato" *ngIf="isLogged" (click)="logOut()"><i class="fas fa-circle-user"></i> Cerrar sesion</a>
+          <a class="btn btn-outline-danger" routerLink="/login-candidato" *ngIf="isLogged" (click)="logOut()"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesion</a>
         </li>
         <!-- <li class="nav-item ">
           <a class="btn btn-outline-danger" routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como candidato</a>
