--- a/frontend/src/app/auth/login-empresa.component.html
+++ b/frontend/src/app/auth/login-empresa.component.html
@@ -19,7 +19,7 @@
         <div class="card-body">
             <form class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" class="form-control" name="email" id="email" required
+                <input type="text" class="form-control mb-3" name="email" id="email" required
                 [(ngModel)]="email">
             </form>
             <form class="form-group">
@@ -28,7 +28,7 @@
                 [(ngModel)]="password">
             </form>
             <form class="form-group">
-                <button class="btn btn-outline-success btn-block" (click)="onLogin()"><i
+                <button class="btn btn-outline-success btn-block mt-4" (click)="onLogin()"><i
                     class="fa-solid fa-right-to-bracket"></i> Acceder</button>
             </form>
         </div>
