--- a/frontend/src/app/auth/registro-candidato.component.html
+++ b/frontend/src/app/auth/registro-candidato.component.html
@@ -1,2 +1,43 @@
 <app-menu></app-menu>
 
+<div class="container d-flex justify-content-center">
+    <div class="card">
+        <div class="card-header">
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/login-candidato"><i class="fa-solid fa-right-to-bracket"></i>
+                        Login</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" routerLink="/registro-candidato" routerLinkActive="active"><i class="fa-solid fa-user-plus"></i> Crea tu
+                        cuenta como candidato</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="card-body">
+            <form class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input type="text" class="form-control" name="nombre" id="nombre" required>
+                
+                <label for="apellidos">Apellidos:</label>
+                <input type="text" class="form-control" name="apellidos" id="apellidos" required>
+            
+                <label for="telefono">telefono:</label>
+                <input type="number" min="0" class="form-control" name="telefono" id="telefono" required>
+            
+                <label for="cif">cif:</label>
+                <input type="text" class="form-control" name="cif" id="cif" required>
+            
+                <label for="email">Email:</label>
+                <input type="text" class="form-control" name="email" id="email" required>
+            
+                <label for="password">Contraseña:</label>
+                <input type="password" class="form-control" name="password" id="password" required>
+            
+                <button class="btn btn-outline-success btn-block"><i class="fa-solid fa-user-plus"></i> Registrate</button>
+            </form>
+            
+        </div>
+    </div>
+</div>
