login empresa hecho, login candidato falla

--- a/frontend/src/app/auth/login-candidato.component.html
+++ b/frontend/src/app/auth/login-candidato.component.html
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control" name="password" id="password" required>
             </form>
             <form class="form-group">
-                <button class="btn btn-outline-success btn-block mt-4" ><i
+                <button class="btn btn-outline-success btn-block mt-4" (click)="onLogin()"><i
                     class="fa-solid fa-right-to-bracket"></i> Acceder</button>
             </form>
         </div>
