--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -2,7 +2,6 @@
     <a class="navbar-brand" href="/">
       <h3>R-Jobs</h3>
       <h3 *ngIf="id">id:{{id}}</h3>
-      <h3 *ngIf="rol">rol:{{rol}}</h3>
     </a>
     <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,10 +13,10 @@
           <a id="of" class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> Lista de ofertas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
+          <a class="nav-link" *ngIf="isEmpresa" routerLink="/nuevo"><i class="fas fa-plus-circle"></i> Crear una oferta de empleo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
+          <a class="nav-link" *ngIf="isEmpresa" routerLink="/"><i class="fas fa-circle-user"></i> Ver mis ofertas de empleo</a>
         </li>
       </ul>
     </div>
@@ -29,9 +28,6 @@
         <li class="nav-item ">
           <a class="btn btn-outline-danger"  *ngIf="isLogged" (click)="logOut()"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesion</a>
         </li>
-        <!-- <li class="nav-item ">
-          <a class="btn btn-outline-danger" routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como candidato</a>
-        </li> -->
         <li class="nav-item ">
           <a class="btn btn-outline-danger" routerLink="/login-candidato"  *ngIf="!isLogged"><i class="fas fa-circle-user"></i> Accede como candidato</a>
         </li>
