--- a/frontend/src/app/empleo/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle-empleo.component.html
@@ -17,7 +17,7 @@
                     <li class="list-group-item"><b>Tipo de Jornada: </b>{{empleo.jornada}}</li>
                     <li class="list-group-item"><b>Telefono de contacto: </b>{{empleo.telefono}}</li>
                     <li class="list-group-item"><b>E-mail: </b> {{empleo.email}}</li>
-                    <li class="list-group-item"><b>Publicada: </b> {{ getTime(empleo.createdAt) }}</li>
+                    <li class="list-group-item"><b>Publicada: </b> {{ publicado(empleo.createdAt) }}</li>
 
                 </ul>
                 <div class="card-footer text-center">
