--- a/frontend/src/app/empleo/editar-empleo.component.html
+++ b/frontend/src/app/empleo/editar-empleo.component.html
@@ -22,8 +22,8 @@
 
                 <div class="form-group">
                     <label for="descripcion">Descripcion de la oferta <span>*</span></label>
-                    <input type="text" class="form-control" id="descripcion" name="descripcion"
-                        [(ngModel)]="empleo.descripcion" required>
+                    <textarea class="form-control" name="descripcion" id="descripcion" rows="4" required  [(ngModel)]="empleo.descripcion"></textarea>
+                       
                 </div>
 
                 <div class="form-group">
