--- a/frontend/src/app/empleo/mis-ofertas.component.html
+++ b/frontend/src/app/empleo/mis-ofertas.component.html
@@ -18,14 +18,9 @@
         <tr>
           <th scope="col"></th>
           <th scope="col">Puesto</th>
-          <!-- <th scope="col">Descripcion</th> -->
           <th scope="col">Empresa</th>
           <th scope="col">Ubicación</th>
-          <!-- <th scope="col">Salario mensual</th> -->
-          <!-- <th scope="col">Tipo de Contrato</th>  -->
           <!-- <th scope="col">Jornada</th> -->
-          <!-- <th scope="col">Telefono de contacto</th> -->
-          <!-- <th scope="col">Email de contacto</th> -->
           <th scope="col">Publicada</th>
           <th scope="col" colspan="3"></th>
         </tr>
@@ -35,14 +30,9 @@
         <tr *ngFor="let empleo of empleos">
           <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
           <td>{{empleo.titulo}}</td>
-          <!-- <td>{{empleo.descripcion}}</td> -->
           <td>{{empleo.empresa}}</td>
           <td>{{empleo.ubicacion}}</td>
-          <!-- <td>{{empleo.salario}}€ Bruto/mes</td> -->
-          <!-- <td>{{empleo.tipoContrato}}</td> -->
           <!-- <td>{{empleo.jornada}}</td> -->
-          <!-- <td>{{empleo.telefono}}</td> -->
-          <!-- <td>{{empleo.email}}</td> -->
           <td>{{ publicado(empleo.createdAt) }}</td>
           <td><button  class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
@@ -96,3 +86,16 @@
       </tbody>
     </table>
   </div>
+  <div class="container" *ngIf="mostrarTabla">
+    <div class="row">
+      <div class="col-md-6" *ngFor="let empleo of empleos">
+        <table>
+          <tr *ngFor="let candidato of getCandidatosArray(empleo.candidatos)">
+            <td><iframe [src]="getBase64(candidato)" width="100%" height="500px"></iframe></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+  
+  
