--- a/frontend/src/app/empleo/mis-ofertas.component.html
+++ b/frontend/src/app/empleo/mis-ofertas.component.html
@@ -1,101 +1,57 @@
-
 <app-menu></app-menu>
-<!-- Barra de busqueda de empleo -->
-  <div id="buscar" class="input-group">
-    <div id="buscador" class="col">
-      <input type="search" id="busca" class="form-control rounded" placeholder="Busca por puesto, empresa o palabra clave..." (keyup)="enter($event)">
-      <button type="submit" class="btn btn-outline-primary" (click)="buscar()"><i class="fas fa-search-plus"></i>
-        Buscar</button>
-      <button class="btn btn-outline-danger" (click)="limpiarBusqueda()"><i class="fas fa-search-minus"></i> Limpiar
-        búsqueda</button>
-    </div>
-  </div>
-
 <!-- lista con todos los empleos guardados en la bd -->
-  <div class="lista" *ngIf="!listaVacia">
-    <table id="tablaOfertas" class="table table-dark text-center" *ngIf="mostrarTabla">
-      <thead>
-        <tr>
-          <th scope="col"></th>
-          <th scope="col">Puesto</th>
-          <th scope="col">Empresa</th>
-          <th scope="col">Ubicación</th>
-          <!-- <th scope="col">Jornada</th> -->
-          <th scope="col">Publicada</th>
-          <th scope="col" colspan="3"></th>
-        </tr>
-      </thead>
+<div class="lista" *ngIf="!listaVacia">
+  <table id="tablaOfertas" class="table table-dark text-center">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Puesto</th>
+        <th scope="col">Empresa</th>
+        <th scope="col">Ubicación</th>
+        <th scope="col">Publicada</th>
+        <th scope="col" colspan="4"></th>
+      </tr>
+    </thead>
 
-      <tbody>
-        <tr *ngFor="let empleo of empleos">
-          <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
-          <td>{{empleo.titulo}}</td>
-          <td>{{empleo.empresa}}</td>
-          <td>{{empleo.ubicacion}}</td>
-          <!-- <td>{{empleo.jornada}}</td> -->
-          <td>{{ publicado(empleo.createdAt) }}</td>
-          <td><button  class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
-              Ver</button>
-            <td><button *ngIf="isEmpresa" class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
+    <tbody>
+      <tr *ngFor="let empleo of empleos">
+        <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
+        <td>{{empleo.titulo}}</td>
+        <td>{{empleo.empresa}}</td>
+        <td>{{empleo.ubicacion}}</td>
+        <td>{{ publicado(empleo.createdAt) }}</td>
+        <td><button class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i
+              class="far fa-eye"></i>
+            Ver</button></td>
+        <td><button *ngIf="!mostrarCandidatos" class="btn btn-outline-primary" (click)="verCandidatos(empleo)"><i class="far fa-eye"></i>
+            Ver Candidatos</button></td>
+        <td><button class="btn btn-outline-danger" *ngIf="mostrarCandidatos" (click)="ocultarCandidatos(empleo)"><i class="far fa-trash-alt"></i> Ocultar
+            candidatos</button></td>
+        <td><button *ngIf="isEmpresa" class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i
+              class="far fa-edit"></i>
             Editar</button></td>
-        <td><button *ngIf="isEmpresa" class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-              class="far fa-trash-alt"></i> Eliminar </button></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+        <td><button *ngIf="isEmpresa" class="btn btn-outline-danger"
+            (click)="empleo.id !== undefined && borrar(empleo.id)"><i class="far fa-trash-alt"></i> Eliminar </button>
+        </td>
+      </tr>
 
-  <!-- Si la lista esta vacia mostrara... -->
-  <div class="container" *ngIf="listaVacia">
-    <div class="p-3 mb-2 bg-dark text-white text-center">
-      <h2>La lista esta vacia</h2>
+    </tbody>
+  </table>
+  <div class="container" *ngIf="mostrarCandidatos">
+    <div class="col-md-6" *ngFor="let empleo of empleos">
+      <table >
+        <tr *ngFor="let candidato of getCandidatosArray(empleo.candidatos)">
+          <td><iframe [src]="getBase64(candidato)" width="100%" height="500px"></iframe></td>
+        </tr>
+      </table>
     </div>
   </div>
 
-  <!-- Lista que mostrara las ofertas cuyas palabras concidan con la busqueda -->
-  <div class="lista" *ngIf="empleosFiltrados?.length ?? 0 > 0">
-    <table id="tablaBusqueda" class="table table-dark text-center">
-      <thead>
-        <tr>
-          <th scope="col"></th>
-          <th scope="col">Puesto</th>
-          <th scope="col">Empresa</th>
-          <th scope="col">Ubicación</th>
-          <!-- <th scope="col">Jornada</th> -->
-          <th scope="col">Publicada</th>
-          <th scope="col" colspan="3"></th>
-        </tr>
-      </thead>
+</div>
 
-      <tbody>
-        <tr *ngFor="let empleo of empleosFiltrados">
-          <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
-          <td>{{empleo.titulo}}</td>
-          <td>{{empleo.empresa}}</td>
-          <td>{{empleo.ubicacion}}</td>
-          <!-- <td>{{empleo.jornada}}</td> -->
-          <td>{{ publicado(empleo.createdAt) }}</td>
-          <td><button class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
-              Ver</button>
-          </td>
-          <td><button  *ngIf="isEmpresa" class="btn btn-outline-warning" routerLink="/editar/{{empleo.id}}"><i class="far fa-edit"></i>
-            Editar</button></td>
-        <td><button  *ngIf="isEmpresa" class="btn btn-outline-danger" (click)="empleo.id !== undefined && borrar(empleo.id)"><i
-              class="far fa-trash-alt"></i> Eliminar </button></td>
-        </tr>
-      </tbody>
-    </table>
+<!-- Si la lista esta vacia mostrara... -->
+<div class="container" *ngIf="listaVacia">
+  <div class="p-3 mb-2 bg-dark text-white text-center">
+    <h2>La lista esta vacia</h2>
   </div>
-  <div class="container" *ngIf="mostrarTabla">
-    <div class="row">
-      <div class="col-md-6" *ngFor="let empleo of empleos">
-        <table>
-          <tr *ngFor="let candidato of getCandidatosArray(empleo.candidatos)">
-            <td><iframe [src]="getBase64(candidato)" width="100%" height="500px"></iframe></td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-  
-  
+</div>
