--- a/frontend/src/app/empleo/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista-empleo.component.html
@@ -32,7 +32,7 @@
           <td>{{empleo.empresa}}</td>
           <td>{{empleo.ubicacion}}</td>
           <td>{{ publicado(empleo.createdAt) }}</td>
-          <td><button  class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+          <td><button  class="btn btn-outline-primary" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
       </tbody>
     </table>
@@ -68,7 +68,7 @@
           <td>{{empleo.ubicacion}}</td>
           <!-- <td>{{empleo.jornada}}</td> -->
           <td>{{ publicado(empleo.createdAt) }}</td>
-          <td><button class="btn btn-outline-primary" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+          <td><button class="btn btn-outline-primary"  routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
           </td>
       </tbody>
