mejoras en curriculems

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,10 +4,7 @@
   
     <h3>Nos importa tu privacidad</h3>
     <p>Con nuestros socios utilizamos cookies para almacenar y acceder a los datos personales como los datos de navegación
-      con el proposito de personalizar el contenido, anuncios y analizar el tráfico del sitio. Podrás encontrar más
-      información acerca del porque con nuestros socios usamos cookies o manejamos tus preferencias haciendo clic en
-      "configuracion de cookies" en el botón debajo. Puedes volver a visitar el consentimiento que has dado o quitar el
-      consentimiento en cualquier momento haciendo clic en configuracion de cookies en nuestra política de cookies.
+      con el proposito de personalizar el contenido, anuncios y analizar el tráfico del sitio.
       Trabajamos en coordinación con un marco de la industria, considerando tus preferencias globalmente con todos los
       sitios webs participantes.
       Con nuestros socios procesamos datos:
