--- a/frontend/src/app/empleo/mis-ofertas.component.css
+++ b/frontend/src/app/empleo/mis-ofertas.component.css
@@ -9,26 +9,12 @@
     max-height: 10vw;
 }
 
-#buscador {
-    display: flex;
-    margin: 1.5vw auto;
-    padding: 1vw;
-    background-color: #212529;
-    border-radius: 1vw;
-    box-shadow: 0px 0px 10px rgb(230, 230, 230);
-}
 
-#buscador>* {
-    margin: 0 0.5vw;
-}
-
-#buscador>input {
-    width: 60%;
-}
 
 .lista {
     box-shadow: 0px 0px 1vw rgb(230, 230, 230);
     border-radius: 1vw;
+    background-color: #212529;
 }
 
 li {
@@ -46,3 +32,8 @@ li {
     vertical-align: middle;
   }
   
+
+iframe{
+    margin: 0 auto;
+    width: 1250px;
+  }
